# nicotine-plus

./: .flake8  .gitignore  .pylintrc  .snapcraft.yaml  AUTHORS.md  NEWS  NEWS.md  README.md  TRANSLATORS.md  _config.yml  default.nix  nicotine  nicotine-import-winconfig  pyproject.toml  setup.cfg  setup.py  shell.nix
.github/workflows/: autopkgtest.yml  build.yml  packaging.yml  reuse.yml  tests.yml  website.yml
build-aux/flatpak/: org.nicotine_plus.Nicotine.json
build-aux/macos/: dependencies.py  noicu.yaml
build-aux/snap/: snapcraft.yaml
build-aux/windows/: dependencies.py  nicotine.manifest  setup.py
data/: org.nicotine_plus.Nicotine.appdata.xml.in  org.nicotine_plus.Nicotine.metainfo.xml  org.nicotine_plus.Nicotine.metainfo.xml.in
data/scripts/: update_about.py  update_contributors.py  update_ip_country_data.py  update_translation_template.py
debian/: changelog  control  copyright  pybuild.testfiles  rules
debian/tests/: control
doc/: DEPENDENCIES.md  DEVELOPING.md  DOWNLOAD.md  PACKAGING.md  SLSKPROTOCOL.md  TESTING.md
files/: org.nicotine_plus.Nicotine.metainfo.xml.in
files/appdata/: org.nicotine_plus.Nicotine.appdata.xml
files/macos/: dependencies-core.sh  dependencies-packaging.sh  dependencies.sh
files/windows/: dependencies-core.sh  dependencies-packaging.sh  dependencies.sh  nicotine.nsi  nicotine.spec
packaging/container/: Containerfile  compose.yml  supervisord.conf
packaging/debian/: rules
packaging/flatpak/: org.nicotine_plus.Nicotine.json  org.nicotine_plus.Nicotine.yaml
packaging/macos/: create-dmg.sh  create_dmg.py  dependencies-core.sh  dependencies-packaging.sh  dependencies.py  dependencies_core.py  dependencies_packaging.py  entitlements.plist  gdbm.py  launch  launcher.sh  nicotine.spec
packaging/windows/: setup.py  (+7 more)
po/: update_pot.py
pynicotine/: __init__.py  __main__.py  buddies.py  chatrooms.py  cli.py  config.py  core.py  downloads.py  events.py  fileio.py  i18n.py  interests.py  logfacility.py  networkfilter.py  notifications.py  nowplaying.py  pluginsystem.py  portmapper.py  privatechat.py  pynicotine.py  search.py  shares.py  slskmessages.py  slskproto.py  transfers.py  uploads.py  upnp.py  userbrowse.py  userinfo.py  userlist.py  users.py  utils.py
(+171 files in other folders)
