[metadata]
name = nicotine-plus
version = attr: pynicotine.__version__
license = GPLv3+
description = Graphical client for the Soulseek peer-to-peer network
long_description =
    Nicotine+ is a graphical client for the Soulseek peer-to-peer
    network.

    Nicotine+ aims to be a lightweight, pleasant, free and open
    source (FOSS) alternative to the official Soulseek client, while
    also providing a comprehensive set of features.
author = Nicotine+ Team
author_email = nicotine-team@lists.launchpad.net
url = https://nicotine-plus.org
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Communications :: Chat
    Topic :: Communications :: File Sharing
    Topic :: Internet
    Topic :: System :: Networking

[options]
scripts = nicotine
packages = find:
python_requires = >=3.6
install_requires = PyGObject>=3.22

[options.packages.find]
include = pynicotine*
exclude = pynicotine.plugins.examplars*, pynicotine.tests*

[options.package_data]
* = **/*.css, **/*.csv, **/*.mo, **/nplus-*.svg, **/*.ui, PLUGININFO

[options.extras_require]
packaging = cx_Freeze
tests = ruff
